combo box changes to clarify spacing and padding of drop-down items. It's still not right net, but it's closer. Also, we fix item selection on Safari.
git-svn-id: http://svn.dojotoolkit.org/src@824 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/src/webui/widgets/templates/HTMLComboBox.css
+++ b/src/webui/widgets/templates/HTMLComboBox.css
@@ -1,4 +1,5 @@
 input.comboBoxInput {
+	font-size: 0.8em;
 	border: 0px;
 }
 
@@ -10,7 +11,7 @@ td.comboBoxOptions {
 
 div.comboBoxOptions {
 	font-family: Verdana, Helvetica, Garamond, sans-serif;
-	font-size: 0.8em;
+	font-size: 0.7em;
 	background-color: white;
 	/* border: 1px solid black; */
 	border: 1px solid #afafaf;
@@ -24,7 +25,9 @@ table.dojoComboBox {
 }
 
 .cbItem {
-	padding: 2px;
+	padding-left: 2px;
+	padding-top: 2px;
+	margin: 0px;
 }
 
 .cbItemEven {
